gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-fmt-debug.rs
#[cfg(fmt_debug = "full")]
// { dg-error ".E0658." "" { target *-*-* } .-1 }
fn main() {

}

